// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RatingMenu renders correct DOM with items 1`] = `
<div>
  <div
    class="root"
  >
    <svg
      style="display: none;"
      xmlns="http://www.w3.org/2000/svg"
    >
      <symbol
        id=""
        viewBox="0 0 24 24"
      >
        <path
          d="M12 .288l2.833 8.718h9.167l-7.417 5.389 2.833 8.718-7.416-5.388-7.417 5.388 2.833-8.718-7.416-5.389h9.167z"
        />
      </symbol>
      <symbol
        id=""
        viewBox="0 0 24 24"
      >
        <path
          d="M12 6.76l1.379 4.246h4.465l-3.612 2.625 1.379 4.246-3.611-2.625-3.612 2.625 1.379-4.246-3.612-2.625h4.465l1.38-4.246zm0-6.472l-2.833 8.718h-9.167l7.416 5.389-2.833 8.718 7.417-5.388 7.416 5.388-2.833-8.718 7.417-5.389h-9.167l-2.833-8.718z"
        />
      </symbol>
    </svg>
    <ul
      class="list"
    >
      <li
        class="item"
      >
        <div>
          <a
            aria-label="0 & up"
            class=""
            href=""
          >
             
            <svg
              aria-hidden="true"
              class="starIcon emptyStarIcon"
              height="24"
              width="24"
            >
               
              <use
                xlink:href="#ais-RatingMenu-starEmptySymbol"
              />
               
            </svg>
            <svg
              aria-hidden="true"
              class="starIcon emptyStarIcon"
              height="24"
              width="24"
            >
               
              <use
                xlink:href="#ais-RatingMenu-starEmptySymbol"
              />
               
            </svg>
            <svg
              aria-hidden="true"
              class="starIcon emptyStarIcon"
              height="24"
              width="24"
            >
               
              <use
                xlink:href="#ais-RatingMenu-starEmptySymbol"
              />
               
            </svg>
            <svg
              aria-hidden="true"
              class="starIcon emptyStarIcon"
              height="24"
              width="24"
            >
               
              <use
                xlink:href="#ais-RatingMenu-starEmptySymbol"
              />
               
            </svg>
            <svg
              aria-hidden="true"
              class="starIcon emptyStarIcon"
              height="24"
              width="24"
            >
               
              <use
                xlink:href="#ais-RatingMenu-starEmptySymbol"
              />
               
            </svg>
             
            <span
              class="label"
            >
              & Up
            </span>
             
            <span
              class="count"
            />
             
          </a>
        </div>
      </li>
      <li
        class="item"
      >
        <div>
          <a
            aria-label="1 & up"
            class=""
            href=""
          >
             
            <svg
              aria-hidden="true"
              class="starIcon fullStarIcon"
              height="24"
              width="24"
            >
               
              <use
                xlink:href="#ais-RatingMenu-starSymbol"
              />
               
            </svg>
            <svg
              aria-hidden="true"
              class="starIcon emptyStarIcon"
              height="24"
              width="24"
            >
               
              <use
                xlink:href="#ais-RatingMenu-starEmptySymbol"
              />
               
            </svg>
            <svg
              aria-hidden="true"
              class="starIcon emptyStarIcon"
              height="24"
              width="24"
            >
               
              <use
                xlink:href="#ais-RatingMenu-starEmptySymbol"
              />
               
            </svg>
            <svg
              aria-hidden="true"
              class="starIcon emptyStarIcon"
              height="24"
              width="24"
            >
               
              <use
                xlink:href="#ais-RatingMenu-starEmptySymbol"
              />
               
            </svg>
            <svg
              aria-hidden="true"
              class="starIcon emptyStarIcon"
              height="24"
              width="24"
            >
               
              <use
                xlink:href="#ais-RatingMenu-starEmptySymbol"
              />
               
            </svg>
             
            <span
              class="label"
            >
              & Up
            </span>
             
            <span
              class="count"
            />
             
          </a>
        </div>
      </li>
      <li
        class="item"
      >
        <div>
          <a
            aria-label="2 & up"
            class=""
            href=""
          >
             
            <svg
              aria-hidden="true"
              class="starIcon fullStarIcon"
              height="24"
              width="24"
            >
               
              <use
                xlink:href="#ais-RatingMenu-starSymbol"
              />
               
            </svg>
            <svg
              aria-hidden="true"
              class="starIcon fullStarIcon"
              height="24"
              width="24"
            >
               
              <use
                xlink:href="#ais-RatingMenu-starSymbol"
              />
               
            </svg>
            <svg
              aria-hidden="true"
              class="starIcon emptyStarIcon"
              height="24"
              width="24"
            >
               
              <use
                xlink:href="#ais-RatingMenu-starEmptySymbol"
              />
               
            </svg>
            <svg
              aria-hidden="true"
              class="starIcon emptyStarIcon"
              height="24"
              width="24"
            >
               
              <use
                xlink:href="#ais-RatingMenu-starEmptySymbol"
              />
               
            </svg>
            <svg
              aria-hidden="true"
              class="starIcon emptyStarIcon"
              height="24"
              width="24"
            >
               
              <use
                xlink:href="#ais-RatingMenu-starEmptySymbol"
              />
               
            </svg>
             
            <span
              class="label"
            >
              & Up
            </span>
             
            <span
              class="count"
            />
             
          </a>
        </div>
      </li>
      <li
        class="item"
      >
        <div>
          <a
            aria-label="3 & up"
            class=""
            href=""
          >
             
            <svg
              aria-hidden="true"
              class="starIcon fullStarIcon"
              height="24"
              width="24"
            >
               
              <use
                xlink:href="#ais-RatingMenu-starSymbol"
              />
               
            </svg>
            <svg
              aria-hidden="true"
              class="starIcon fullStarIcon"
              height="24"
              width="24"
            >
               
              <use
                xlink:href="#ais-RatingMenu-starSymbol"
              />
               
            </svg>
            <svg
              aria-hidden="true"
              class="starIcon fullStarIcon"
              height="24"
              width="24"
            >
               
              <use
                xlink:href="#ais-RatingMenu-starSymbol"
              />
               
            </svg>
            <svg
              aria-hidden="true"
              class="starIcon emptyStarIcon"
              height="24"
              width="24"
            >
               
              <use
                xlink:href="#ais-RatingMenu-starEmptySymbol"
              />
               
            </svg>
            <svg
              aria-hidden="true"
              class="starIcon emptyStarIcon"
              height="24"
              width="24"
            >
               
              <use
                xlink:href="#ais-RatingMenu-starEmptySymbol"
              />
               
            </svg>
             
            <span
              class="label"
            >
              & Up
            </span>
             
            <span
              class="count"
            />
             
          </a>
        </div>
      </li>
      <li
        class="item"
      >
        <div>
          <a
            aria-label="4 & up"
            class=""
            href=""
          >
             
            <svg
              aria-hidden="true"
              class="starIcon fullStarIcon"
              height="24"
              width="24"
            >
               
              <use
                xlink:href="#ais-RatingMenu-starSymbol"
              />
               
            </svg>
            <svg
              aria-hidden="true"
              class="starIcon fullStarIcon"
              height="24"
              width="24"
            >
               
              <use
                xlink:href="#ais-RatingMenu-starSymbol"
              />
               
            </svg>
            <svg
              aria-hidden="true"
              class="starIcon fullStarIcon"
              height="24"
              width="24"
            >
               
              <use
                xlink:href="#ais-RatingMenu-starSymbol"
              />
               
            </svg>
            <svg
              aria-hidden="true"
              class="starIcon fullStarIcon"
              height="24"
              width="24"
            >
               
              <use
                xlink:href="#ais-RatingMenu-starSymbol"
              />
               
            </svg>
            <svg
              aria-hidden="true"
              class="starIcon emptyStarIcon"
              height="24"
              width="24"
            >
               
              <use
                xlink:href="#ais-RatingMenu-starEmptySymbol"
              />
               
            </svg>
             
            <span
              class="label"
            >
              & Up
            </span>
             
            <span
              class="count"
            />
             
          </a>
        </div>
      </li>
      <li
        class="item selectedItem"
      >
        <div>
          <a
            aria-label="5 & up"
            class=""
            href=""
          >
             
            <svg
              aria-hidden="true"
              class="starIcon fullStarIcon"
              height="24"
              width="24"
            >
               
              <use
                xlink:href="#ais-RatingMenu-starSymbol"
              />
               
            </svg>
            <svg
              aria-hidden="true"
              class="starIcon fullStarIcon"
              height="24"
              width="24"
            >
               
              <use
                xlink:href="#ais-RatingMenu-starSymbol"
              />
               
            </svg>
            <svg
              aria-hidden="true"
              class="starIcon fullStarIcon"
              height="24"
              width="24"
            >
               
              <use
                xlink:href="#ais-RatingMenu-starSymbol"
              />
               
            </svg>
            <svg
              aria-hidden="true"
              class="starIcon fullStarIcon"
              height="24"
              width="24"
            >
               
              <use
                xlink:href="#ais-RatingMenu-starSymbol"
              />
               
            </svg>
            <svg
              aria-hidden="true"
              class="starIcon fullStarIcon"
              height="24"
              width="24"
            >
               
              <use
                xlink:href="#ais-RatingMenu-starSymbol"
              />
               
            </svg>
             
            <span
              class="label"
            >
              & Up
            </span>
             
            <span
              class="count"
            />
             
          </a>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`RatingMenu renders correct DOM without items 1`] = `
<div>
  <div
    class="root noRefinementRoot"
  >
    <svg
      style="display: none;"
      xmlns="http://www.w3.org/2000/svg"
    >
      <symbol
        id=""
        viewBox="0 0 24 24"
      >
        <path
          d="M12 .288l2.833 8.718h9.167l-7.417 5.389 2.833 8.718-7.416-5.388-7.417 5.388 2.833-8.718-7.416-5.389h9.167z"
        />
      </symbol>
      <symbol
        id=""
        viewBox="0 0 24 24"
      >
        <path
          d="M12 6.76l1.379 4.246h4.465l-3.612 2.625 1.379 4.246-3.611-2.625-3.612 2.625 1.379-4.246-3.612-2.625h4.465l1.38-4.246zm0-6.472l-2.833 8.718h-9.167l7.416 5.389-2.833 8.718 7.417-5.388 7.416 5.388-2.833-8.718 7.417-5.389h-9.167l-2.833-8.718z"
        />
      </symbol>
    </svg>
  </div>
</div>
`;
